# ai-coding-agent-benchmark

./: .gitignore  README.md
benchmark/: generate_sonnet.md  run_benchmark.sh  run_full_benchmark.sh
benchmark/results/opus-4.6/python/run-2/: app.py
benchmark/results/opus-4.6/python/run-3/: result.json
benchmark/results/opus-4.6/python/run-4/: app.py  result.json
benchmark/results/opus-4.6/python/run-5/: result.json
benchmark/results/opus-4.6/ruby/run-1/: app.rb  result.json
benchmark/results/opus-4.6/ruby/run-3/: app.rb
benchmark/results/python/run-1/: app.py  result.json
benchmark/results/python/run-2/: result.json
benchmark/results/python/run-3/: app.py
benchmark/results/python/run-5/: app.py
benchmark/results/ruby/run-1/: Gemfile
benchmark/results/ruby/run-2/: Gemfile  app.rb  result.json
benchmark/results/ruby/run-3/: result.json
benchmark/results/ruby/run-5/: result.json
benchmark/results/rust/run-1/: Cargo.toml  result.json
benchmark/results/rust/run-2/: Cargo.toml
benchmark/results/rust/run-3/: result.json
benchmark/results/sonnet-4.6/rust/run-5/: Cargo.toml
benchmark/results/sonnet-4.6/rust/run-5/src/: main.rs
benchmark/results/typescript/run-1/: package-lock.json  tsconfig.json
benchmark/results/typescript/run-2/: app.ts  package-lock.json  package.json  result.json
benchmark/results/typescript/run-3/: package.json
benchmark/results/typescript/run-4/: app.ts  package-lock.json
benchmark/results/typescript/run-5/: app.ts
benchmark/spec/: PROMPT.md
benchmark/test/: test_api.sh
(+66 files in other folders)
