[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "todo-api"
path = "src/main.rs"

[dependencies]
actix-web = "4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
